--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://AeNick04.github.io/valentinesday",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist"
+    "start": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "express": "^4.18.2",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "serve": "^14.2.4"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -26,6 +29,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^5.0.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
